# NUMERA

./: CONTRIBUTING.md  Cargo.toml  NUMERA_README.md  PROJECT_SUMMARY.md  README.md
docs/: NUMERA_Architecture_v1_0.docx  NUMERA_Integration_Guide_v1_0.docx  NUMERA_v0_1_0_Project_Document.docx
examples/: README.md
scrawl/: numera_layer0_value_core.scrawl  numera_layer1_rule_library.scrawl  numera_layer2_pattern_engine.scrawl  numera_layer3_retrieval.scrawl  numera_layer4_execution.scrawl  numera_layer5_integration.scrawl  numera_main.scrawl
src/: execution.rs  integration.rs  lib.rs  pattern_engine.rs  retrieval.rs  rule_library.rs  value_core.rs
